--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "node": ">=4.6.0",
     "npm": ">=3.10.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.18.3"
+  },
   "dependencies": {
     "async": "~2.1.5",
     "body-parser": "~1.16.1",
@@ -21,7 +23,7 @@
     "cors": "~2.8.1",
     "crypto": "0.0.3",
     "ejs": "^2.5.6",
-    "express": "~4.14.1",
+    "express": "^4.14.1",
     "express-session": "~1.15.1",
     "glob": "~7.1.1",
     "lodash": "~4.17.4",
